src/test/resources/fail/cyclicgraph/B.scala
//acyclic
package fail.cyclicgraph

class B {
  val a: A = null
}
